Update page title in coming-soon.html

--- a/core/templates/coming-soon.html
+++ b/core/templates/coming-soon.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Ashishmaraviya">
     <link rel="icon" href="assets/images/favicon.png" type="image/x-icon" />
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon" />
-    <title>404 - Error page pack all in one</title>
+    <title>Welcome to Optics</title>
     <!--Google font-->
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap"
