--- a/core/templates/coming-soon.html
+++ b/core/templates/coming-soon.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,7 +18,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap"
         rel="stylesheet">
     <!-- Bootstrap css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}" type="text/css">
     <!-- Theme css -->
     <link rel="stylesheet" type="text/css" href="assets/css/coming-soon-page.css">
     <link rel="stylesheet" type="text/css" href="assets/css/whatsapp-chat.css">
