--- a/core/templates/coming-soon.html
+++ b/core/templates/coming-soon.html
@@ -122,7 +122,7 @@
                             <div class="d-flex bd-highlight">
                                 <!-- Profile Picture -->
                                 <div class="er-img-cont">
-                                    <img src="assets/images/profile_03.jpg" class="er-user-img" alt="Profile image">
+                                    <img src="{% static 'assets/images/profile_03.jpg' %}" class="er-user-img" alt="Profile image">
                                     <span class="er-status-icon er-offline"></span>
                                 </div>
                                 <!-- Display Name & Last Seen -->
@@ -145,7 +145,7 @@
                             <div class="d-flex bd-highlight">
                                 <!-- Profile Picture -->
                                 <div class="er-img-cont">
-                                    <img src="assets/images/profile_04.jpg" class="er-user-img" alt="Profile image">
+                                    <img src="{% static 'assets/images/profile_04.jpg' %}" class="er-user-img" alt="Profile image">
                                     <span class="er-status-icon er-offline"></span>
                                 </div>
                                 <!-- Display Name & Last Seen -->
@@ -169,7 +169,7 @@
         <div class="er-right-bottom">
             <div class="er-box">
                 <div class="er-button rotateBackward">
-                    <img class="whatsapp" src="assets/images/whatsapp.png" alt="whatsapp icon">
+                    <img class="whatsapp" src="{% static 'assets/images/whatsapp.png' %}" alt="whatsapp icon">
                 </div>
             </div>
         </div>
@@ -177,14 +177,14 @@
     </div>
     <!-- Whatsapp end -->
     <!-- latest jquery-->
-    <script src="assets/js/jquery-3.5.1.min.js"></script>
+    <script src="{% static 'assets/js/jquery-3.5.1.min.js' %}"></script>
     <!-- theme particles script -->
-    <script src="assets/js/particles.min.js"></script>
-    <script src="assets/js/app.js"></script>
-    <script src="assets/js/countdown.js"></script>
-    <script src="assets/js/whatsapp-chat.js"></script>
+    <script src="{% static 'assets/js/particles.min.js' %}"></script>
+    <script src="{% static 'assets/js/app.js' %}"></script>
+    <script src="{% static 'assets/js/countdown.js' %}"></script>
+    <script src="{% static 'assets/js/whatsapp-chat.js' %}"></script>
     <!-- Theme js-->
-    <script src="assets/js/script.js"></script>
+    <script src="{% static 'assets/js/script.js' %}"></script>
 </body>
 
 </html>
