--- a/core/templates/coming-soon.html
+++ b/core/templates/coming-soon.html
@@ -40,142 +40,17 @@
                             <img src="{% static 'assets/images/logo.png' %}" alt="logo">
                         </div>
                         <!-- Countdown -->
-                        <div id="timer" data-date="September 30, 2024 19:15:10 PDT"></div>
+                        <div id="timer" data-date="February 1, 2024 20:00:00 AEST"></div>
 
                         <h1 class="title">We will <span>launch</span> soon.</h1>
                         <p class="hero-counter-desc">Lorem Ipsum is simply dummy text of the printing and typesetting
                             industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                        <div class="nav-details">
-                            <form action="">
-                                <input type="text" placeholder="Enter email" />
-                                <button class="btn" data-toggle="modal" data-target="#newsletter_modal"
-                                    type="button">subscribe</button>
-                            </form>
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Whatsapp -->
-    <div class="er-style er-right-bottom">
-        <!-- Start Floating Panel Container -->
-        <div class="er-panel">
-            <!-- Panel Header -->
-            <div class="er-header">
-                <strong>Need Help?</strong>
-                <p>Chat with us on WhatsApp</p>
-            </div>
-            <!-- Panel Content -->
-            <div class="er-body">
-                <ul>
-                    <!-- Start Single Contact List -->
-                    <li>
-                        <a class="er-list" data-number="918866774266"
-                            data-message="Please help me! From Erratum - ORDER ID is : #654321485">
-                            <div class="d-flex bd-highlight">
-                                <!-- Profile Picture -->
-                                <div class="er-img-cont">
-                                    <img src="{% static 'assets/images/profile_01.jpg' %}" class="er-user-img" alt="Profile image">
-                                    <span class="er-status-icon"></span>
-                                </div>
-                                <!-- Display Name & Last Seen -->
-                                <div class="er-user-info">
-                                    <span>Sahar Darya</span>
-                                    <p>Sahar left 7 mins ago</p>
-                                </div>
-                                <!-- Chat iCon -->
-                                <div class="er-chat-icon">
-                                    <i class="fa fa-whatsapp"></i>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <!--/ End Single Contact List -->
-                    <!-- Start Single Contact List -->
-                    <li>
-                        <a class="er-list" data-number="918866774266"
-                            data-message="Please help me! From Erratum - ORDER ID is : #654321485">
-                            <div class="d-flex bd-highlight">
-                                <!-- Profile Picture -->
-                                <div class="er-img-cont">
-                                    <img src="{% static 'assets/images/profile_02.jpg' %}" class="er-user-img" alt="Profile image">
-                                    <span class="er-status-icon er-online"></span>
-                                </div>
-                                <!-- Display Name & Last Seen -->
-                                <div class="er-user-info">
-                                    <span>Yolduz Rafi</span>
-                                    <p>Yolduz is online</p>
-                                </div>
-                                <!-- Chat iCon -->
-                                <div class="er-chat-icon">
-                                    <i class="fa fa-whatsapp"></i>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <!--/ End Single Contact List -->
-                    <!-- Start Single Contact List -->
-                    <li>
-                        <a class="er-list" data-number="918866774266"
-                            data-message="Please help me! From Erratum - ORDER ID is : #654321485">
-                            <div class="d-flex bd-highlight">
-                                <!-- Profile Picture -->
-                                <div class="er-img-cont">
-                                    <img src="{% static 'assets/images/profile_03.jpg' %}" class="er-user-img" alt="Profile image">
-                                    <span class="er-status-icon er-offline"></span>
-                                </div>
-                                <!-- Display Name & Last Seen -->
-                                <div class="er-user-info">
-                                    <span>Nargis Hawa</span>
-                                    <p>Nargis left 30 mins ago</p>
-                                </div>
-                                <!-- Chat iCon -->
-                                <div class="er-chat-icon">
-                                    <i class="fa fa-whatsapp"></i>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <!--/ End Single Contact List -->
-                    <!-- Start Single Contact List -->
-                    <li>
-                        <a class="er-list" data-number="918866774266"
-                            data-message="Please help me! From Erratum - ORDER ID is : #654321485">
-                            <div class="d-flex bd-highlight">
-                                <!-- Profile Picture -->
-                                <div class="er-img-cont">
-                                    <img src="{% static 'assets/images/profile_04.jpg' %}" class="er-user-img" alt="Profile image">
-                                    <span class="er-status-icon er-offline"></span>
-                                </div>
-                                <!-- Display Name & Last Seen -->
-                                <div class="er-user-info">
-                                    <span>Khadija Mehr</span>
-                                    <p>Khadija left 50 mins ago</p>
-                                </div>
-                                <!-- Chat iCon -->
-                                <div class="er-chat-icon">
-                                    <i class="fa fa-whatsapp"></i>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <!--/ End Single Contact List -->
-                </ul>
-            </div>
-        </div>
-        <!--/ End Floating Panel Container -->
-        <!-- Start Right Floating Button-->
-        <div class="er-right-bottom">
-            <div class="er-box">
-                <div class="er-button rotateBackward">
-                    <img class="whatsapp" src="{% static 'assets/images/whatsapp.png' %}" alt="whatsapp icon">
-                </div>
-            </div>
-        </div>
-        <!--/ End Right Floating Button-->
-    </div>
-    <!-- Whatsapp end -->
+    
     <!-- latest jquery-->
     <script src="{% static 'assets/js/jquery-3.5.1.min.js' %}"></script>
     <!-- theme particles script -->
