Update countdown time zone

--- a/core/templates/coming-soon.html
+++ b/core/templates/coming-soon.html
@@ -40,7 +40,7 @@
                             <img src="{% static 'assets/images/logo.png' %}" alt="logo">
                         </div>
                         <!-- Countdown -->
-                        <div id="timer" data-date="February 1, 2024 20:00:00 AEST"></div>
+                        <div id="timer" data-date="February 1, 2024 20:00:00 PDT"></div>
 
                         <h1 class="title">We will <span>launch</span> soon.</h1>
                         <p class="hero-counter-desc">Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -50,7 +50,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- latest jquery-->
     <script src="{% static 'assets/js/jquery-3.5.1.min.js' %}"></script>
     <!-- theme particles script -->
